<?xml version="1.0" encoding="utf-8"?>
<!-- riktiga string i values -->
<resources>

    <string name="app_name">GuessAnimalApp</string>
    <string name="the_app_name">Animal Sound</string>
    <string name="action_settings">Settings</string>
    <string name="menu_start">START</string>
    <string name="menu_library">LIBRARY</string>
    <string name="menu_extras">EXTRAS</string>
    <string name="title_activity_dialog_window">DialogWindow</string>
    <string name="lang_settings">Language Settings</string>
    <string name="sound_settings">Sound Settings</string>
    <string name="help_settings">Help Settings</string>
    <string name="english_lang">English</string>
    <string name="swedish_lang">Swedish</string>
    <string name="title_activity_lang">LangActivity</string>
    <string name="lang_choose">Choose language</string>
    <string name="media_text">Media Volume</string>
    <string name="easy_play">EASY</string>
    <string name="medium_play">MEDIUM</string>
    <string name="hard_play">ADVANCED</string>
    <string name="sound_header">Sound Settings</string>
    <string name="r_button_effects">Sound Effects</string>
    <string name="r_button_backg">Background Sound</string>
    <string name="title_activity_sound">SoundActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>
    <string name="title_activity_start_play">StartPlayActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_play_game">PlayGameActivity</string>

    <string name="play_sound_button">Play Sound!</string>




    <string name="elephant_desc">Elephants are large mammals that live in Africa and Asia. They often live in savannahs, deserts and forests. Elephants can live up to 70 years and weigh 7,000 kg.</string>
    <string name="cow_desc">Cows are large ungulates. Cows live everywhere in the world and they can weigh up to 600 kg. There are several species.</string>
    <string name="lion_desc">Lions are big cats that live in Africa and India. Lions live in prides in savannahs and forests. Lions can live up to 14 years.</string>
    <string name="catmeow_desc">A louise cat is an animal</string>
    <string name="sealion_desc">Sea lions are sea mammals that have a lifespan of 20-30 years. A female sea lion weigh 100 kg and a male sea lion weigh 300 kg. Sea lions are very cute.</string>
    <string name="cat_desc">Cats live everywhere in the world. They can live up to 20 years. There are more than 70 species. Cats can be house cats or wildcats.</string>
    <string name="next_game">Next Game!</string>
    <string name="exit_game">Exit</string>




    <string name="bat_desc">Bats are mammals that looks like flying mice. There are about 1,240 different species of bats. Bats live all around the world, except from cold places.</string>
    <string name="duck_desc">Ducks are often aquatic birds. Ducks often have orange peckers and flat fins. There are several species all around the world.</string>
    <string name="owl_desc">Owls exist all over the world, except Antarctica and some remote islands. There are over 200 different species in the world.</string>
    <string name="parrot_desc">Parrots have 393 different species. Parrots live in tropical regions. Some parrots are able to talk.</string>
    <string name="penguin_desc">Penguins are aquatic flightless birds. They live in the Southern Hemisphere. Adult penguins weigh 35 kg and live up to 20 years.</string>
    <string name="rooster_desc">A rooster is a male chicken that often crows "cock-a-doodle-doo". The rooster's comb is red. The rooster live everywhere in the world.</string>


    <string name="elephant_title">Elephant</string>
    <string name="cow_title">Cow</string>
    <string name="lion_title">Lion</string>
    <string name="catmeow_title">Louise Cat</string>
    <string name="sealion_title">Sea lion</string>
    <string name="cat_title">Cat</string>

    <string name="bat_title">Bat</string>
    <string name="duck_title">Duck</string>
    <string name="owl_title">Owl</string>
    <string name="parrot_title">Parrot</string>
    <string name="penguin_title">Penguin</string>
    <string name="rooster_title">Rooster</string>

    <string name="extras_button">Extras</string>
    <string name="extras_text">Yarp this is extras</string>

    <string-array name="Animals">
        <item>Elephant</item>
        <item>Cow</item>
        <item>Lion</item>
        <item>Louise</item>
        <item>Sealion</item>
        <item>Cat</item>
    </string-array>

</resources>