<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_app_name"
        android:id="@+id/header_logo"
        android:layout_alignBottom="@+id/menu_logo"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/menu_icon"
        android:onClick="showPopup"
        android:id="@+id/menu_logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_start"
        android:onClick="toStart"
        android:id="@+id/start_button"
        android:background="@drawable/button_colors"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="139dp"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_library"
        android:background="@drawable/button_colors"
        android:id="@+id/library_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/start_button"
        android:layout_alignStart="@+id/start_button"
        android:layout_marginTop="33dp"/>

    <Button
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_extras"
        android:id="@+id/extras_button"
        android:background="@drawable/button_colors"
        style="?android:attr/borderlessButtonStyle"
        android:layout_below="@+id/library_button"
        android:layout_alignLeft="@+id/library_button"
        android:layout_alignStart="@+id/library_button"
        android:layout_marginTop="33dp" />

</RelativeLayout>
