<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_style"
    android:weightSum="1">

    <TextView
        android:text="@string/help_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/helpTitel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ADADAC"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/helpTitel">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:layout_weight="0.5"
            android:id="@+id/cancelButton"
            android:background="@drawable/button_dialog_colors"
            android:layout_margin="7dp"
            android:onClick="cancelClick"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_button"
            android:layout_weight="0.5"
            android:id="@+id/okButton"
            android:background="@drawable/button_dialog_colors"
            android:layout_margin="7dp"
            android:onClick="okClick"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

</LinearLayout>
