<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.hannah.guessanimalapp.StartPlayActivity">


    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/menu_icon"
        android:onClick="showPopup"
        android:id="@+id/menu_logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/easy_play"
        android:onClick="easyPlay"
        android:id="@+id/easy_button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:drawableTop="@drawable/olast"
        android:background="@drawable/easy_button_style"/>

    <Button
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/medium_play"
        android:onClick="mediumPlay"
        android:id="@+id/medium_button"
        android:layout_marginTop="50dp"
        android:drawableTop="@drawable/last"
        android:layout_below="@+id/easy_button"
        android:layout_centerHorizontal="true"
        android:background="@drawable/medium_button_style"/>

    <Button
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/hard_play"
        android:onClick="advPlay"
        android:layout_marginTop="45dp"
        android:id="@+id/advanced_button"
        android:drawableTop="@drawable/last"
        android:layout_below="@+id/medium_button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/adv_button_style"/>

</RelativeLayout>
